########50 characters############################ add hr vertical in Section info contact ########72 characters################################################## - fonctionne verticalement doit etre encore corriger pour version mobile (passe en horizontal) - doit refaire position correct pour section info contact. # Problem, Task, Reason for CommitSolution # Solution or List of ChangesNote # Special instructions, testing steps, rake, etc

--- a/css/contact-main.css
+++ b/css/contact-main.css
@@ -102,10 +102,11 @@
 /* Section Form */
 .sec-form {
   font-family: "prata";
-  font-size: 16px;
   line-height: 24px;
   color: #777777;
   text-align: left !important;
+  color: #302e2f;
+  font-size: 14px;
 }
 
 .sec-form__form {}
